k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra-api
  namespace: default
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: hydra-api
  template:
    metadata:
      labels:
        app: hydra-api
    spec:
      containers:
      - name: hydra-api
        image: ymatharaujo/hydra-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hydra-api-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hydra-api
  ports:
    - port: 80
      targetPort: 8080
